generate docker with nginx

--- a/Docker/.env.example
+++ b/Docker/.env.example
@@ -4,3 +4,8 @@ PHP_SRC_PATH=./php/src
 PHP_INI_PATH=./php/php.ini
 PHP_TIMEZONE=UTC
 PHP_SESSION_SAVE_PATH=/tmp
+
+# Nginx
+NGINX_CONTAINER_NAME=nginx-app
+NGINX_PORT_HTTP=80
+NGINX_PORT_HTTPS=443
