--- a/Docker/.env
+++ b/Docker/.env
@@ -1,6 +1,11 @@
 # PHP
 PHP_CONTAINER_NAME=php-app
-PHP_SRC_PATH=./php/src
+PHP_SRC_PATH=../src/php
 PHP_INI_PATH=./php/php.ini
 PHP_TIMEZONE=UTC
 PHP_SESSION_SAVE_PATH=/tmp
+
+# Nginx
+NGINX_CONTAINER_NAME=nginx-app
+NGINX_PORT_HTTP=80
+NGINX_PORT_HTTPS=443
